DpiChanger: Move to manual apply for a consistent change - Includes cleanups - Manual apply gives better results than automatic applies

--- a/Cyredra/res/xml/preferences_general.xml
+++ b/Cyredra/res/xml/preferences_general.xml
@@ -89,6 +89,10 @@
             			android:entryValues="@array/pref_dpi_values"
             			android:defaultValue="DPI_DEFAULT" />
 
+        			<Preference
+            			android:key="pref_key_dpiApply"
+            			android:title="@string/pref_dpi_apply_title" />
+
     			</PreferenceCategory>
 
 			</PreferenceScreen>
