--- a/Cyredra/res/values/cyra_strings.xml
+++ b/Cyredra/res/values/cyra_strings.xml
@@ -166,6 +166,7 @@
 	<!-- Density -->
 	<string name="pref_dpi_title">Change density (dpi) of launcher</string>
 	<string name="pref_dpi_summary">"This only applies to cyra launcher, not to any other application\nCurrent density: %s"</string>
+	<string name="pref_dpi_apply_title">Apply dpi settings</string>
 
 	<!-- Overview buttons -->
 	<string name="cyra_apps_button_text">Applications</string>
